<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="ExtraText">

    <ImageButton
        android:id="@+id/btnHistory"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:src="@drawable/ic_history"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:scaleType="centerInside"
        android:clickable="true"
        android:contentDescription="@string/view_history" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/btnHistory"
        android:paddingTop="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="16dp">

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingBottom="16dp"
                android:text="@string/bmi_title"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stretchColumns="1"
                android:shrinkColumns="1">

                <TableRow>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/weight_hint"
                        android:padding="8dp" />
                    <EditText
                        android:id="@+id/etWeight"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="numberDecimal"
                        android:ems="5"
                        android:gravity="center"
                        android:background="#FFFFFF" />
                </TableRow>

                <TableRow>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/height_hint"
                        android:padding="8dp" />
                    <EditText
                        android:id="@+id/etHeight"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="numberDecimal"
                        android:ems="5"
                        android:gravity="center"
                        android:background="#FFFFFF" />
                </TableRow>

                <TableRow>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/bmi_result"
                        android:padding="8dp" />
                    <TextView
                        android:id="@+id/tvBmiResult"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/hint_BMI_show"
                        android:gravity="center"
                        android:padding="8dp"
                        android:background="#D3D3D3"
                        android:ems="5" />
                </TableRow>

                <TableRow>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/bmi_category"
                        android:padding="8dp" />
                    <TextView
                        android:id="@+id/tvBmiCategory"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/normal"
                        android:gravity="center"
                        android:padding="8dp"
                        android:background="#E0E0B0"
                        android:ems="5" />
                </TableRow>
            </TableLayout>

            <Button
                android:id="@+id/btnCalculate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calculate_button"
                android:layout_gravity="center"
                android:padding="8dp" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>